- Improved *pel-show-text-modes*: it can also show the value of
  *delete-selection-mode* and *electric-quote-local-mode* status.
- Improved *iedit-mode support*:
  - Modified the following key bindings to make they easier to type:
    - ~C-c C-o~ is bound to *iedit-show/hide-occurrence-lines*.
    - ~C-c C-a~ is bound to *iedit-show/hide-context-lines*.

** New Features:
- Added support for Erlang code formatters. The new
  *pel-erlang-code-formatter-command* user-option specifies the Erlang code
  formatter to use.  The Erlang code formatter can be specified by a command
  line format string or by name.  Currently the only Erlang Code formatter
  supported by name is [[https://github.com/WhatsApp/erlfmt#readme][erlfmt]].  Others can be used but the command line must
  be written explicitly.  The ~<f12> R~ key is bound to the
  *pel-erlang-format-code* command that invokes the specified Erlang code formatter.
- The latest version of timelog supports the *timelog-open-file* command.  It
  opens the file identified by the *timeclock-file* user-option.  PEL binds
  this command to ~C-x t l f~ key sequence.
- Add preliminary support for the *go-translate* package when
  *pel-use-go-translate* user option is turned on.  No key binding or
  activation done yet. This is only available for Emacs 27.1 and later.
- New command for C buffers: the *pel-c-comment-dwim* command, bound to the
  standard ~M-;~ key,  extends the standard comment-dwim command: it is able
  to create multi-line C comments using the 1 or 2 stars continuation comment
  style.  The behaviour is selected by the new *pel-c-multiline-comments*
  user-option, which defaults to the standard behaviour and creates one
  comment per line.  Change that value to create multi-line comments instead.
- Explicit support for the *electric-pair-mode*:
  - Add key binding ~<f11> M-e~ to *electric-pair-local-mode*.  This allows quickly
    toggling the *electric-pair-mode* for the current buffer activating the ability